2010-02-15  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Removed test file
	* test/CookieStorageTest.cc

2010-02-15  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Check both EAGAIN and EWOULDBLOCK
	* src/SocketCore.cc

2010-02-15  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Removed ret == 0 checking for SSL_read(), SSL_write() and
	SSL_peek() because the checks are done in the caller.  In
	SocketBuffer::send(), throw exception if nothing could be written
	and socket error was not EWOULDBLOCK
	* src/SocketBuffer.cc
	* src/SocketCore.cc

2010-02-15  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed error code handling so that it can handle Winsock2 error
	code.
	* src/SocketCore.cc
	* src/SocketCore.h

2010-02-14  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Bump up version number to 1.8.3
	* configure.ac
	* doc/aria2c.1.txt

2010-02-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed the bug that aria2 doesn't handle return value if error
	occurred before download begins.
	* src/MultiUrlRequestInfo.cc
	* src/main.cc

2010-02-11  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Removed SegmentManFactory class.
	* src/AbstractSegmentManFactory.h
	* src/DefaultSegmentManFactory.cc
	* src/DefaultSegmentManFactory.h
	* src/Makefile.am
	* src/RequestGroup.cc
	* src/RequestGroup.h
	* src/SegmentManFactory.h

2010-02-11  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Destroyed digest context after getting calculated hash.
	* src/Piece.cc
	* src/Piece.h

2010-02-11  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Removed BitfieldManFactory class.
	* src/BitfieldManFactory.cc
	* src/BitfieldManFactory.h
	* src/DefaultPieceStorage.cc
	* src/Makefile.am
	* src/PeerSessionResource.cc
	* src/Piece.cc
	* src/main.cc
	* test/DefaultPieceStorageTest.cc

2010-02-11  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
