@@ -1,3 +1,8 @@
+2010-02-16  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
+
+	Small optimization for A2_WOULDBLOCK(e)
+	* src/SocketCore.cc
+
 2010-02-15  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
 
 	Removed test file
